In the Linux & OS X Makefiles, the install target didn't force anything to be built first. As a result, if a user typed `sudo make install` the install script would fail due to missing files. I changed the target to build the so and lib.
git-svn-id: http://scion.duhs.duke.edu/guest_svn/gamma/trunk@429 75907e46-c664-0410-ae3d-e599167a7a88

--- a/platforms/OSX/Makefile
+++ b/platforms/OSX/Makefile
@@ -1057,7 +1057,7 @@ installlib: force
 #
 ######################################################################
 
-install: force
+install: so lib
 	@echo
 	@echo "           Installing GAMMA"
 	@echo
